# robot-arm

./: .gitignore  README.md
src/robot_arm/: package.xml
src/robot_arm/config/: bridge_config.yaml  controller.yaml  display.rviz:Zone.Identifier
src/robot_arm/launch/: controller.launch.py  display.launch.py  gazebo.launch.py
src/robot_arm/meshes/: base_link.stl  elbow_link_1.stl  shoulder_link_1.stl
src/robot_arm/scripts/: move_arm.py
src/robot_arm/urdf/: materials.xacro  robot_arm.gazebo  robot_arm.trans  robot_arm.xacro  ros2_control.xacro
src/robot_arm/worlds/: lab.world
