<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>robot_arm</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="chidubemjan31@gmail.com">chidubem</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <build_depend>ament_cmake</build_depend>
    <build_depend>urdf</build_depend>
    <build_depend>gazebo_ros</build_depend>

    <exec_depend>ament_cmake</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>xacro</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher_gui</exec_depend>

    <depend>ros2_control</depend>
    <depend>ros2_controllers</depend>
    <depend>hardware_interface</depend>
    <depend>controller_manager</depend>
    <depend>joint_state_broadcaster</depend>
    <depend>gazebo_ros2_control</depend>
    <depend>position_controllers</depend>
    <depend>velocity_controllers</depend>
    <depend>effort_controllers</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>